# verocase

./: ,api-improvements2.md  ,report.md  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  Makefile  README.md  caseproc  caseproc.py  ltacproc  pyproject.toml  pyrightconfig.json  verocase.py  wrap_long_lines.py
.github/workflows/: ci.yml  publish.yml
docs/: RELEASE.md  alternatives.md  api-review.md  caseproc-concepts.md  conversion-report.md  design-spec.md  gsn-in-mermaid.md  ltac-extended.txt  ltac.txt  plan.md  plan2.md  plan2_details.md  plan3.md  plan3_details.md  plan4.md  plan5.md  plan7.md  plan8.md  plan8_details.md  plan9.md  reference.md  research6.md  sacm-mermaid.md  spec.md  streaming.md  test_links.md  tutorial.md  wishlist.md
docs/archive/: api-review.md
tests/: migrate_fixtures.py  run_tests.py
tests/fixtures/: anchor-collision.ltac  badgeapp-doc-input.expected.md  badgeapp-doc-input.md  badgeapp-doc-input.stderr.txt  badgeapp-doc-output.expected.md  badgeapp-doc-stderr.expected.txt  badgeapp-doc.config  badgeapp-doc.ltac  badgeapp-doc.toml  badgeapp-top.config  badgeapp-top.ltac  badgeapp-top.sacm.mermaid.expected  badgeapp-top.sacm.mermaid.expected.md  badgeapp-top.sacm.mermaid.stderr  badgeapp-top.sacm.mermaid.stderr.expected.txt  badgeapp-top.toml  comments.ltac  demo-output.expected.md  doc-simple-input.md  doc-simple-output.expected.md  doc-simple-stderr.expected.txt  doc-simple.config  doc-simple.expected.md  doc-simple.md  doc-simple.md.expected  doc-simple.toml  element-selector-input.md  inline-error-input.md  inline-expected.md  inline-expected.stderr.txt  inline-input.md  inline-output.expected.md  inline-update-stderr.expected.txt  introduction-input.md  introduction-output.expected.md  nested-directive-input.md  no-blank-between-pkgs.ltac  package-star-input.md  simple-c2.expected.md  simple-star.expected.md  (+21 more)
tests/fixtures/.backup/: stress-test-output.expected.md
