[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "caseproc"
dynamic = ["version", "description"]
readme = "README.md"
license = {file = "LICENSE.md", text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "David A. Wheeler"}]

[project.scripts]
caseproc = "caseproc:main"

[tool.flit.sdist]
exclude = ["docs/archive"]
