[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "verocase"
dynamic = ["version", "description"]
readme = "README.md"
license = {file = "LICENSE.md"}
# license-expression is PEP 639; flit_core doesn't recognize it yet and warns,
# but the field is harmless and will be used by tools that support PEP 639.
license-expression = "MIT"
keywords = [
  "assurance-case", "assurance case",
  "safety-case",
  "SACM", "GSN", "LTAC", "CAE",
  "security case", "security justification",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Documentation",
  "Topic :: Software Development :: Quality Assurance",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8"
authors = [{name = "David A. Wheeler"}]

[project.urls]
Homepage = "https://github.com/david-a-wheeler/verocase"
Source = "https://github.com/david-a-wheeler/verocase"
Issues = "https://github.com/david-a-wheeler/verocase/issues"

[project.scripts]
verocase = "verocase:main"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "B", "I", "RUF", "UP", "PERF", "PLW", "ARG", "FLY"]
ignore = ["E702"]  # Allow multiple statements on one line (semicolon)

[tool.flit.sdist]
# These include/exclude lists must be kept in sync with .gitignore.
include = ["tests/", "docs/"]
exclude = ["docs/archive", "tests/results", "tests/fixtures/.backup"]
